--- a/Denise Chai Sy Qing/question 5/Question5.html
+++ b/Denise Chai Sy Qing/question 5/Question5.html
@@ -8,17 +8,27 @@
 	</head>
 	
 	<body>
+		<textarea id="fetchData" name="fetchData" rows="10" cols="10">
+			
+		</textarea>
 
 	</body>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script>
-		const logJson = async () => {
-			const response = await fetch('https://api.domainsdb.info/v1/domains/search?domain=facebook&zone=com');
-			const json = await response.json();
-			console.log(json);
-		}
-		logJson();
+
+
+		var request = new Request('https://api.domainsdb.info/v1/domains/search?domain=facebook&zone=com');
+		fetch(request, {mode: 'no-cors'})
+			.then(function(response) {
+				console.log(response);
+				console.log(JSON.stringify(response));
+				$('textarea').val(JSON.stringify(response));
+
+			}).catch(function(error) {  
+			console.log('Request failed', error)  
+			});
+
 
 	</script>
 	
