--- a/Denise Chai Sy Qing/question 6/question6.html
+++ b/Denise Chai Sy Qing/question 6/question6.html
@@ -1,18 +1,14 @@
 <!Doctype html>
 
 	<head>
-		<title>Question 5</title>
+		<title>Question 6</title>
 
 	
 	</head>
+
 	
-	<body>
-
-	</body>
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script>
-		const structure = {count: 8, isValid: true, title:"Exam", temperature: 87.88}
+		const structure = {count: 8, isValid: true, title:"Exam", temperature: 87.88};
 		const {title} = structure;
 		console.log(title);
 
