--- a/Denise Chai Sy Qing/question 7/question7.html
+++ b/Denise Chai Sy Qing/question 7/question7.html
@@ -13,7 +13,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script>
-		const logJson = async () => {
+		const process = async () => {
 			const response = await fetch('https://jsonplaceholder.typicode.com/todos/10');
 			const json = await response.json();
  
@@ -22,20 +22,10 @@
 			console.log(json);
 			var html= "<table style='width:100%'><tr> <th>user ID</th> <th>ID</th> <th>title</th><th>completed</th></tr><tr><td style='text-align:center'>1</td><td style='text-align:center'>10</td><td style='text-align:center'>illo est ratione doloremque quia maiores aut</td><td style='text-align:center'>true</td></tr></table>"
 			$("div").html(html);
-			
-	
-
-
+		
 		}
-		logJson();
-
-
-
-
+		process();
 
 	</script>
-	
-	
-
  
 </html>
